--- a/src/findmycareer/bootPage.form
+++ b/src/findmycareer/bootPage.form
@@ -71,6 +71,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnLogIn">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="33" red="cc" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Log in"/>
       </Properties>
       <Events>
