--- a/src/findmycareer/SignUpPage.form
+++ b/src/findmycareer/SignUpPage.form
@@ -223,7 +223,7 @@
     <Component class="javax.swing.JFormattedTextField" name="txtDoB">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format subtype="0" type="1"/>
+          <Format format="yyyy-MM-dd" subtype="-1" type="1"/>
         </Property>
       </Properties>
       <Constraints>
