--- a/src/findmycareer/Login.form
+++ b/src/findmycareer/Login.form
@@ -104,6 +104,9 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="11"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
           <GridBagConstraints gridX="2" gridY="10" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="0" insetsLeft="0" insetsBottom="0" insetsRight="0" anchor="10" weightX="0.0" weightY="0.0"/>
@@ -805,7 +808,7 @@
       </StatementProvider>
       <Parameters>
         <CodeExpression id="51_txtPassword">
-          <CodeVariable name="txtPassword" type="8194" declaredType="javax.swing.JPasswordField"/>
+          <CodeVariable name="txtPassword" type="8201" declaredType="javax.swing.JPasswordField"/>
           <ExpressionOrigin>
             <ExpressionProvider type="ComponentRef">
               <ComponentRef name="txtPassword"/>
